--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500';
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Sumana:wght@700&display=swap");
+
+/* ELEMENTS CSS */
 
 body {
     margin: 0 auto;
@@ -7,12 +10,41 @@ body {
     color: #d7d7d7;
     background-color:  #0C1821;
     text-align: center;
-    -webkit-font-smoothing: antialiased; 
-    -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5 {
+    font-size:25px; 
+    color: #e4e4e4;
 }
 
 p li {
     width: 80%;
+}
+
+ul li {
+    list-style-image: url("img/list-bullet.png");
+    margin: 0.5em 0em;
+}
+
+ol li {
+    list-style-image: url("img/list-bullet-ul.png");
+}
+
+pre {
+    background-color: #1f1f1f;
+    color: #f4f4f4;
+    border-left: 3px solid #f36d33;
+    border-radius: 5px;
+    page-break-inside: avoid;
+    font-family: monospace;
+    font-size: 15px;
+    line-height: 1.6;
+    margin-bottom: 1.6em;
+    max-width: 100%;
+    overflow: auto;
+    padding: 1em 1.5em;
+    display: block;
+    word-wrap: break-word;
 }
 
 a {
@@ -23,17 +55,40 @@ a:hover {
     color: #fec278;
 }
 
+video {
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
+/* CLASSES CSS */
+
+.img-zoom {
+    display: block;
+    margin: 0 auto;
+    border-radius: 25px;
+    transition: transform .3s;
+}
+
+.img-zoom:hover {
+    transform: scale(1.2);
+    transition: transform .3s;
+}
+
 .header {
     margin: 0 auto;
     text-align: center;
     position: fixed; top: 0;
     width: 100%;
+    height: fit-content;
+    padding: 10px 0px;
     background-color: #262e39;
+    z-index: 999;
 }
 
 .header div {
     float: left;
-    margin: 10px 0px 0px 30px;
+    margin: auto 1em;
 }
 
 .header img {
@@ -44,40 +99,36 @@ a:hover {
 .header img:hover {
     width: 90px;
     transition: width .5s, background-color .5s, border-radius .5s, padding .5s;
-    background-color: #43ffd0;
+    background-color: #f5a23e;
     border-radius: 5px;
     padding: 3px 10px;
 }
 
-.navigation {
-    box-sizing: border-box;
-    right: -750px;
-    top: 5px;
-    position: relative;
-    width: 590px;
-    height: 47px;
-    background: #333a43;
-    border-radius: 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.navigation{
+    float: right;
+    list-style-type: none;
+    background-color: #333A43;
+    width: fit-content;
+    margin: 0 1em;
+    border-radius: 5px;
+    padding: 10px 0px;
 }
 
-.navigation a{
-    position: relative;
-    display: inline-block;
-    font-size: 1em;
-    font-weight: 500;
-    width: 20%;
-    color: #e4e4e4;
+.navigation li{
+    display: inline;
+}
+
+.navigation li a{
+    color: white;
+    text-align: center;
+    padding: 14px 21px;
+    border-radius: 5px;
     text-decoration: none;
-    padding: 0 23px;
 }
 
-.navigation a:hover{
+.navigation li a:hover{
+    background-color: #3a424c;
     color: #f5a23e;
-    font-size: large;
-    font-weight: 500;
 }
 
 .content-table {
@@ -138,6 +189,8 @@ a:hover {
     border-collapse: collapse;
     background-color: #1c2f4b;
     color: #e4e4e4;
+    border: 2px solid #18273f;
+    border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -160,7 +213,7 @@ a:hover {
     background-color: #213657;
 }
 
-.button {
+.text-button {
     display: inline-block;
     margin: 2px auto;
     padding: 3px 6px;
@@ -177,7 +230,7 @@ a:hover {
     transition: background-color .3s, transform .3s, color .3s;
 }
 
-.button:hover {
+.text-button:hover {
     color: #d7d7d7;
     background-color: rgba(245, 162, 62, 1);
     transform: translateY(-5px);
@@ -190,13 +243,6 @@ a:hover {
     border-radius: 25%;
 }
 
-.podcast {
-    clear: both;
-    margin: auto auto;
-    padding:20px;
-    color: #0C1821;
-}
-
 .Intro {
     overflow: hidden;
 }
@@ -204,10 +250,22 @@ a:hover {
 /* HOMEPAGE IDs */
 
 #Introduction {
-    background: linear-gradient(to left, #1B2A41, #1b2b40);
     padding: 3em 0em;
+    background-image: url("img/homepage/blob-scene-haikei.svg");
     height: fit-content;
 }
+
+
+#Introduction img{
+    width: 200px;
+    margin-left: 0.5em;
+    float: left;
+    margin-right: 1em;
+    border-radius: 50%;
+    border: 5px solid #213450;
+    transition: border .5s, box-shadow .5s;
+}
+
 
 #Introduction:hover img{
     border: 5px solid rgba(245, 162, 62, 1);
@@ -215,34 +273,45 @@ a:hover {
     transition: border .5s, box-shadow .5s;
 }
 
-#Introduction .Intro-image {
+#Intro-image {
     width: 35%;
     float:left;
     margin: 1em 0em 0em 5.5em;
 }
 
-#Introduction img{
-    width: 200px;
-    margin-left: 0.5em;
-    margin-right: 1em;
-    border-radius: 50%;
-    border: 5px solid #213450;
-    transition: border .5s, box-shadow .5s;
-}
-
-.Intro-paragraph {
+#Intro-paragraph {
     margin: 1em 0em 0em 2em;
     text-align: left;
     width: 93%;
 }
 
+#Internet {
+    position: relative;
+    margin-bottom: -30px; 
+    width: fit-content;
+    padding: 0 5px;
+    font-size: 80px;
+    color: #f5a23e;
+    transition: color .3s;
+    z-index: 1;
+}
+
+#Greeting:hover #Internet {
+    color: #73c4be;
+    transition: color .3s;
+}
+
 #Greeting {
-    padding: 100px 100px 30px 140px;
-    
+    padding: 50px 100px 30px 140px;
+    color: #e4e4e4;
     text-align: left;
     line-height: 1.5;
     background: url("img/homepage/arquitectura-internet-red.png") no-repeat center center fixed;
     background-size: cover;
+}
+
+#Hello {
+    font-size:40px
 }
 
 #Steps {
@@ -289,6 +358,31 @@ a:hover {
     min-width: max-content;
 }
 
+#Study-list{
+    float: left;
+    margin: 1em 1.3em;
+}
+
+#podcast {
+    clear: both;
+    margin: auto auto;
+    padding:20px;
+    color: #e4e4e4;
+}
+
+/* Welcome To The Internet IDs */
+
+#Quote {
+    margin: 0 auto;
+    text-align: center;
+    font-size: 20px;
+    background-color: #1c2f4b;
+    padding: 0.2em 1em;
+    width: fit-content;
+    border-radius: 15px;
+    margin-top: 1em;
+}
+
 /* ISPs IDs */
 
 #ISPs-button {
@@ -314,6 +408,55 @@ a:hover {
     transition: transform .3s;
 }
 
+/* Packet Radios IDs */
+
+#PR-list {
+    background-color: #192942;
+    border: #192942;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+#PR-elements {
+    background-color: #294062;
+    border: #294062;
+    margin: 1em;
+    padding: 1em;
+}
+
+#Alternative-img {
+    width: 400px;
+    margin: 0 auto;
+    border-radius: 25px;
+}
+
+/* Internet Network IDs */
+
+#TCP-prot {
+    width: 50%;
+    padding: 0em 1em;
+    margin: 5px auto;
+    background-color: #1c2f4b;
+}
+
+#DNS-img {
+    background-color: #f5a23e; 
+    margin: 0 auto;
+    box-shadow: 0 0 0px #1b2b40;
+}
+
+#Server-img {
+    width:70%;
+}
+
+#TCP-box {
+    width: 50%;
+    padding: 10px;
+    border: 2px solid #1c2f4b;
+    border-radius: 5px;
+    margin: 20px auto;
+    background-color: #1c2f4b;
+}
+
 /* Self-promotion IDs */
 
 #content-table {
@@ -328,11 +471,18 @@ a:hover {
 #bio {
     text-align: left;
     display: inline-block;
+    position: relative;
     background: #142236; 
     border: 3px solid linear-gradient(45deg, #73c4be, white);
     width: 20%;
+    min-width: 20%;
     padding: 0em 1em;
-    margin: 2em 3em;
+    margin: 2em 6px;
+}
+
+#bio:hover #roles{
+    transform: scale(1.1);
+    transition: transform .3s;
 }
 
 #bio p{
@@ -344,10 +494,20 @@ a:hover {
     height: fit-content;
 }
 
+#profile-pic {
+    margin: 10px 30px 0px;
+    width: 175px;
+    text-align: center;
+    position: relative;
+    display: inline-block;
+}
+
 #roles {
     text-align: center;
     background-color: #213450;
     border: 3px solid #293e5e;
     padding: 10px;
+    font-size: 14px;
     border-radius: 10px;
+    transition: transform .3s;
 }
